--- a/CFBCursos/desafio04-Calculadora/style.css
+++ b/CFBCursos/desafio04-Calculadora/style.css
@@ -56,6 +56,7 @@ div#calculadora > div:hover{
 div#calculadora > div:active{
     border: 1px solid rgba(0, 0, 0, 0.7);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    background-color: rgb(210, 240, 255);
 }
 div#visor:active{
     border: 1px solid rgba(0, 0, 0, 0.5) !important;
